# toonlite-py

./: .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
src/toonlite/: __init__.py  decoder.py  encoder.py  exceptions.py
tests/: test_basic.py
